@@ -253,10 +253,10 @@
     <copy todir='${target-dir}/hrc/'  overwrite='true'>
       <fileset dir='hrc/' includes='proto*.hrc, *.ent.hrc'/>
     </copy>
-    <replace file="${target-dir}/hrc/proto.hrc" token='link="' value='link="jar:common.jar!'/>
+    <replace dir="${target-dir}/hrc" includes='*.hrc' token='link="' value='link="jar:common.jar!'/>
 
     <zip destfile='${target-dir}/hrc/auto/types/auto.jar'>
-      <fileset dir='hrc/auto' includes='gen/**/*, qrm/**/*, types/**/*'/>
+      <fileset dir='hrc/auto' includes='gen/**/*, qrm/**/*, types/**/*, far/**/*'/>
     </zip>
 
     <copy todir='${target-dir}/hrc/auto' overwrite='true'>
@@ -497,6 +497,9 @@
     <copy todir='${eclipseplugin-dir}/colorer/hrd/rgb'>
       <fileset dir='hrd/rgb' includes='**'/>
     </copy>
+    <copy todir='${eclipseplugin-dir}/colorer/hrd'>
+      <fileset dir='hrd' includes='*.xml'/>
+    </copy>
 
     <copy todir='${eclipseplugin-dir}/colorer'>
       <fileset dir='.' includes='README'/>
@@ -571,6 +574,9 @@
     <mkdir dir='${farplugin-dir}/hrd/console'/>
     <copy todir='${farplugin-dir}/hrd/console'>
       <fileset dir='hrd/console' includes='**'/>
+    </copy>
+    <copy todir='${farplugin-dir}/hrd'>
+      <fileset dir='hrd' includes='*.xml'/>
     </copy>
 
     <copy todir='${farplugin-dir}'>
