@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding='UTF-8'?>
 <!DOCTYPE catalog PUBLIC "-//Cail Lomecb//DTD Colorer CATALOG take5//EN"
-  "http://colorer.sf.net/2003/catalog.dtd">
+  "http://colorer.sf.net/2003/catalog.dtd"[
+
+<!ENTITY catalog-console SYSTEM "hrd/catalog-console.xml">
+<!ENTITY catalog-rgb SYSTEM "hrd/catalog-rgb.xml">
+<!ENTITY catalog-text SYSTEM "hrd/catalog-text.xml">
+
+]>
 
 <catalog xmlns="http://colorer.sf.net/2003/catalog"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -8,63 +14,51 @@
                              http://colorer.sf.net/2003/catalog.xsd">
 
   <hrc-sets>
+
     <location link="hrc/proto.hrc"/>
     <location link="hrc/auto"/>
+<!--
+    <location link="C:\far\plugins\colorer\hrc\proto.hrc"/>
+    <location link="C:\far\plugins\colorer\hrc\auto"/>
+-->
+
   </hrc-sets>
 
-
-  <hrd-sets>
-    <hrd class="console" name="default" description="Aqua on blue">
-      <location link="hrd/console/default.hrd"/>
-    </hrd>
-    <hrd class="console" name="blue" description="Blue colors">
-      <location link="hrd/console/blue.hrd"/>
-    </hrd>
-    <hrd class="console" name="nc"  description="NC colors">
-      <location link="hrd/console/nc.hrd"/>
-    </hrd>
-    <hrd class="console" name="white" description="White colors">
-      <location link="hrd/console/white.hrd"/>
-    </hrd>
-    <hrd class="console" name="black"   description="Black colors">
-      <location link="hrd/console/black.hrd"/>
-    </hrd>
-    <hrd class="console" name="hack"  description="Matrix/Hack">
-      <location link="hrd/console/hack.hrd"/>
-    </hrd>
-    <hrd class="console" name="dnlike"  description="Gray a'la DN">
-      <location link="hrd/console/dnlike.hrd"/>
-    </hrd>
-    <hrd class="console" name="gray"   description="Light gray">
-      <location link="hrd/console/white.hrd"/>
-      <location link="hrd/console/gray.hrd"/>
-    </hrd>
-    <hrd class="console" name="xmastree" description="Xmas tree">
-      <location link="hrd/console/xmastree.hrd"/>
-    </hrd>
-
-    <hrd class="console" name="ocean" description="Ocean Vladimir Fonarev">
-      <location link="hrd/console/contrib/ocean.hrd"/>
-    </hrd>
-    <hrd class="console" name="black_ay" description="Black from Alex Yaroslavsky">
-      <location link="hrd/console/contrib/black_ay.hrd"/>
-    </hrd>
-    <hrd class="console" name="black_sezal" description="Black Sezal">
-      <location link="hrd/console/contrib/black_sezal.hrd"/>
-    </hrd>
-    <hrd class="console" name="mirror" description="Mirror from Eugene Efromov">
-      <location link="hrd/console/contrib/mirror.hrd"/>
-    </hrd>
-    <hrd class="console" name="graypult" description="Gray (pult)">
-      <location link="hrd/console/contrib/gray_pult.hrd"/>
-    </hrd>
-    <hrd class="console" name="classic" description="'Classic' by Tim Sobolev">
-      <location link="hrd/console/contrib/classic.hrd"/>
-    </hrd>
-    <hrd class="console" name="Cyberpunk" description="Cyberpunk black from 4ekucT">
-      <location link="hrd/console/contrib/cyberpunk.hrd"/>
-    </hrd>
-
-  </hrd-sets>
+  &catalog-console;
 
 </catalog>
+<!-- ***** BEGIN LICENSE BLOCK *****
+   - Version: MPL 1.1/GPL 2.0/LGPL 2.1
+   -
+   - The contents of this file are subject to the Mozilla Public License Version
+   - 1.1 (the "License"); you may not use this file except in compliance with
+   - the License. You may obtain a copy of the License at
+   - http://www.mozilla.org/MPL/
+   -
+   - Software distributed under the License is distributed on an "AS IS" basis,
+   - WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
+   - for the specific language governing rights and limitations under the
+   - License.
+   -
+   - The Original Code is the Colorer Library.
+   -
+   - The Initial Developer of the Original Code is
+   - Cail Lomecb <cail@nm.ru>.
+   - Portions created by the Initial Developer are Copyright (C) 1999-2005
+   - the Initial Developer. All Rights Reserved.
+   -
+   - Contributor(s):
+   -
+   - Alternatively, the contents of this file may be used under the terms of
+   - either the GNU General Public License Version 2 or later (the "GPL"), or
+   - the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
+   - in which case the provisions of the GPL or the LGPL are applicable instead
+   - of those above. If you wish to allow use of your version of this file only
+   - under the terms of either the GPL or the LGPL, and not to allow others to
+   - use your version of this file under the terms of the MPL, indicate your
+   - decision by deleting the provisions above and replace them with the notice
+   - and other provisions required by the LGPL or the GPL. If you do not delete
+   - the provisions above, a recipient may use your version of this file under
+   - the terms of any one of the MPL, the GPL or the LGPL.
+   -
+   - ***** END LICENSE BLOCK ***** -->
